--- a/Episodico_presentacion/pom.xml
+++ b/Episodico_presentacion/pom.xml
@@ -19,6 +19,11 @@
             <version>${jakartaee}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>Episodico_Patrones</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
     
     <build>
