caso de uso registrar
Co-Authored-By: RobertoFavela <160526441+RobertoFavela@users.noreply.github.com>

--- a/Episodico_presentacion/pom.xml
+++ b/Episodico_presentacion/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>Episodico_presentacion</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
-    <name>Episodico_presentacion-1.0-SNAPSHOT</name>
+    <name>Episodico_presentacion</name>
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
