--- a/Episodico_Dominio/pom.xml
+++ b/Episodico_Dominio/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.mycompany</groupId>
-    <artifactId>appWeb_Dominio</artifactId>
+    <artifactId>Episodico_Dominio</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <dependencies>
@@ -19,4 +19,5 @@
         <maven.compiler.target>21</maven.compiler.target>
         <exec.mainClass>com.mycompany.appweb_dominio.AppWeb_Dominio</exec.mainClass>
     </properties>
+    <name>Episodico_Dominio</name>
 </project>
