Caso de uso registrarse
el caso de uso registrarse ya sirve, pero faltan validaciones

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /Episodico_presentacion/target/
 /Episodico_Patrones/target/
 /Episodico_Dominio/target/
+/Episodico_Logica/target/
+/Episodico_Presentacion/target/
