apariencia de inicio de sesion

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 /Episodico_Dominio/target/
 /Episodico_Logica/target/
 /Episodico_Presentacion/target/
+/pruebasWeb/target/
+/DomoDominoServerCentralServidor/target/
+/DomoDominoServerCentralCliente/target/
