--- a/Episodico_Dominio/pom.xml
+++ b/Episodico_Dominio/pom.xml
@@ -12,6 +12,24 @@
             <version>4.0.1</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>com.wholegrain-software</groupId>
+            <artifactId>spring-mongodb-test</artifactId>
+            <version>1.2.0</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-async</artifactId>
+            <version>3.11.0-beta4</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-reactivestreams</artifactId>
+            <version>4.10.2</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
