--- a/Episodico_presentacion/src/main/webapp/WEB-INF/web.xml
+++ b/Episodico_presentacion/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="6.0" xmlns="https://jakarta.ee/xml/ns/jakartaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd">
+    
+    <servlet>
+        <servlet-name>GestionSerieController</servlet-name>
+        <servlet-class>controladorGestionSerie.GestionSerieController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>GestionSerieController</servlet-name>
+        <url-pattern>/GestionSerieController</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
+        <servlet-name>LogInController</servlet-name>
+        <servlet-class>controladoInicioSesion.LogInController</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>LogInController</servlet-name>
+        <url-pattern>/LogInController</url-pattern>
+    </servlet-mapping>
+    
     <servlet>
         <servlet-name>RegisterController</servlet-name>
         <servlet-class>controladorRegistro.RegisterController</servlet-class>
