--- a/Episodico_Dominio/pom.xml
+++ b/Episodico_Dominio/pom.xml
@@ -30,6 +30,11 @@
             <version>4.10.2</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.0.33</version>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
