--- a/Episodico_Presentacion/src/main/webapp/WEB-INF/web.xml
+++ b/Episodico_Presentacion/src/main/webapp/WEB-INF/web.xml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="6.0" xmlns="https://jakarta.ee/xml/ns/jakartaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd">
-    
     <servlet>
         <servlet-name>GestionSerieController</servlet-name>
         <servlet-class>controladorGestionSerie.GestionSerieController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>controladorPerfil</servlet-name>
+        <servlet-class>controladorGestionPerfil.gestionPerfilRController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>gestionPerfilController</servlet-name>
+        <servlet-class>controladorGestionPerfil.gestionPerfilController</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>GestionSerieController</servlet-name>
         <url-pattern>/GestionSerieController</url-pattern>
     </servlet-mapping>
-    
     <servlet>
         <servlet-name>FeedController</servlet-name>
         <servlet-class>controladorFeed.FeedController</servlet-class>
@@ -18,7 +24,6 @@
         <servlet-name>FeedController</servlet-name>
         <url-pattern>/FeedController</url-pattern>
     </servlet-mapping>
-    
     <servlet>
         <servlet-name>LogInController</servlet-name>
         <servlet-class>controladoInicioSesion.LogInController</servlet-class>
@@ -27,7 +32,6 @@
         <servlet-name>LogInController</servlet-name>
         <url-pattern>/LogInController</url-pattern>
     </servlet-mapping>
-    
     <servlet>
         <servlet-name>RegisterController</servlet-name>
         <servlet-class>controladorRegistro.RegisterController</servlet-class>
@@ -36,20 +40,24 @@
         <servlet-name>RegisterController</servlet-name>
         <url-pattern>/RegisterController</url-pattern>
     </servlet-mapping>
-    
     <dependency>
         <groupId>javax.servlet.jsp.jstl</groupId>
         <artifactId>javax.servlet.jsp.jstl-api</artifactId>
         <version>1.2.0</version>
     </dependency>
-
-    
+    <servlet-mapping>
+        <servlet-name>controladorPerfil</servlet-name>
+        <url-pattern>/controladorPerfil</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>gestionPerfilController</servlet-name>
+        <url-pattern>/gestionPerfilController</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>
             30
         </session-timeout>
     </session-config>
-    
     <error-page>
         <error-code>404</error-code>
         <location>/error_404.jsp</location>
@@ -58,6 +66,4 @@
         <error-code>500</error-code>
         <location>/error_500.jsp</location>
     </error-page>
-
-    
 </web-app>
