--- a/Episodico_Presentacion/pom.xml
+++ b/Episodico_Presentacion/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>Episodico_Logica</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.0.33</version>
+        </dependency>
     </dependencies>
     
     <build>
