ya jala el registro
Co-Authored-By: RobertoFavela <160526441+RobertoFavela@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /pruebasWeb/target/
 /DomoDominoServerCentralServidor/target/
 /DomoDominoServerCentralCliente/target/
+/Episodicos_Precentacion/target/
