--- a/Episodicos_Precentacion/src/main/webapp/WEB-INF/web.xml
+++ b/Episodicos_Precentacion/src/main/webapp/WEB-INF/web.xml
@@ -34,6 +34,15 @@
     </servlet-mapping>
     
     <servlet>
+        <servlet-name>SeriesController</servlet-name>
+        <servlet-class>controladorGestionSerie.SeriesController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>SeriesController</servlet-name>
+        <url-pattern>/SeriesController</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
         <servlet-name>UserProfileController</servlet-name>
         <servlet-class>controladorPerfil.UserProfileController</servlet-class>
     </servlet>
