--- a/Episodicos_Precentacion/pom.xml
+++ b/Episodicos_Precentacion/pom.xml
@@ -87,7 +87,11 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.15.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.3</version>
+        </dependency>
     </dependencies>
     
     <build>
