--- a/Episodicos_Precentacion/src/main/webapp/WEB-INF/web.xml
+++ b/Episodicos_Precentacion/src/main/webapp/WEB-INF/web.xml
@@ -16,6 +16,10 @@
         <servlet-name>ComentarioController</servlet-name>
         <url-pattern>/ComentarioController</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ConvertirAAnclado</servlet-name>
+        <url-pattern>/ConvertirAAnclado</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>
             30
@@ -40,6 +44,10 @@
     <servlet>
         <servlet-name>ComentarioController</servlet-name>
         <servlet-class>controladorPost.ComentarioController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ConvertirAAnclado</servlet-name>
+        <servlet-class>controladorPost.ConvertirAAnclado</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>LogInController</servlet-name>
