--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 /DomoDominoServerCentralServidor/target/
 /DomoDominoServerCentralCliente/target/
 /Episodicos_Precentacion/target/
+/Asignacion6/target/
+/mavenproject1/target/
+/EjemploMoverFicha/target/
